Closed Bug 928223 Opened 12 years ago Closed 12 years ago

[Wifi][WPA-EAP] wpa_supplicant can't access keystore socket due to lack of R/W permission.

Categories

(Firefox OS Graveyard :: Wifi, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: chucklee, Assigned: chucklee)

References

Details

Attachments

(2 files, 4 obsolete files)

keystore socket is created with permission 750 and owner root:root, but wpa_supplicant is run as user wifi. Hence we need change it's permission to 666.
Add new function to unixsocket ipc to perform setup for listen sockets, per bug 789217 comment 34. ril, bluetooth, and nfc are affected.
Attachment #818864 - Flags: review?(vyang)
Attachment #818864 - Flags: review?(kyle)
Attachment #818864 - Flags: review?(echou)
Attachment #818864 - Flags: review?(allstars.chh)
Change socket permission after it is created.
Attachment #818867 - Flags: review?(kyle)
Attachment #818864 - Flags: review?(vyang) → review+
Run try to make sure current patch can be built on all platform: https://tbpl.mozilla.org/?tree=Try&rev=768dc082c035
Attachment #818864 - Flags: review?(kyle) → review+
Attachment #818867 - Flags: review?(kyle) → review+
Thanks for doing this! Always figured we'd need more granularity in UnixSocket, just didn't know where it'd be needed. :)
Attachment #818864 - Flags: review?(allstars.chh) → review+
Attachment #818864 - Flags: review?(echou) → review+
Update reviewer in commit summary.
Attachment #818864 - Attachment is obsolete: true
Update reviewer in commit summary.
Attachment #818867 - Attachment is obsolete: true
Please can you rebase? :-) [/c/src-gecko/b2g-inbound]$ qimp 928223 Fetching... done Parsing... done 1: 0001. Add function to perform setup for listen socket. 2: 0002. Change keystore socket permission after created. Which patches do you want to import? [Default is '1', use '1-2' for all] 1-2 adding 928223 to series file renamed 928223 -> 0002._Change_keystore_socket_permission_after_created.patch adding 0001._Add_function_to_perform_setup_for_listen_socket.patch to series file applying 0001._Add_function_to_perform_setup_for_listen_socket.patch patching file dom/bluetooth/BluetoothUnixSocketConnector.cpp Hunk #1 FAILED at 155 1 out of 1 hunks FAILED -- saving rejects to file dom/bluetooth/BluetoothUnixSocketConnector.cpp.rej patch failed, unable to continue (try -v) patch failed, rejects left in working dir errors during apply, please fix and refresh 0001._Add_function_to_perform_setup_for_listen_socket.patch
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: