Bug 928223 - 0001. Add function to perform setup for listen socket. r=qDot echou vicamo yoshi